fixed geo handler, added geo entities to swagger model
